--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "animejs": "^3.2.1",
+    "pinia": "^2.0.23",
     "three": "^0.145.0",
     "troisjs": "^0.3.4",
     "vue": "^3.2.37"
