--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@iconify-json/ion": "^1.1.4",
     "@types/animejs": "^3.1.6",
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.12",
@@ -23,6 +24,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.0",
     "unplugin-auto-import": "^0.11.2",
+    "unplugin-icons": "^0.14.12",
     "unplugin-vue-components": "^0.22.8",
     "vite": "^3.1.0"
   }
